# gallatin-radio-agent

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  GALLATIN_CONTEXT.md  GALLATIN_DEMO_TRANSCRIPT.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md
apps/api/src/gallatin_api/: __init__.py  event_ledger.py  main.py  outbound_audio.py  playback.py  radio.py  readiness.py  scenario.py  settings.py
apps/api/tests/: test_event_ledger.py  test_radio_transcription.py  test_readiness.py  test_scenario.py
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  api.ts
artifacts/transcripts/: jK5k9_Gql-I-speaker-labeled.txt  jK5k9_Gql-I.txt
data/scenarios/: README.md  kaohsiung_tainan_logistics_picture.json  kaohsiung_tainan_playback.json  kaohsiung_tainan_prerecorded_radio_clips.json
docs/: GALLATIN_ML_INTERVIEW_PREP.md  LCOP_PRD_DRAFT.md  PROJECT.md
docs/adr/: 0001-openrouteservice-for-v1-routing.md  0002-event-driven-workflow-over-agent-swarm.md  0003-fastapi-react-postgis-stack.md  0004-monorepo-apps-layout.md
explainers/: military-logistics-for-gallatin.md
infra/: README.md
scripts/: dev.sh
