[project]
name = "gallatin-radio-agent"
version = "0.1.0"
description = "Gallatin Radio Agent demo app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api/src"]
testpaths = ["apps/api/tests"]
